# template-benchmarks-rs

./: Cargo.toml  README.md
.github/scripts/: make_readme.sh
.github/workflows/: ci.yml
src/: build.rs  ramhorns_bench.rs
